Fixing gap between bottom svg shape in latest news

--- a/src/components/latestNews/latestNews.module.css
+++ b/src/components/latestNews/latestNews.module.css
@@ -1,5 +1,6 @@
 .section-wrapper {
   background-color: var(--bg-dark-blue);
+  display: block;
 }
 
 .section-container {
